vbnc/vbnc/tests/Errors/30311-6.vb
Class T
    Const M_Char_Char As Char = 12.0R
End Class